<resources>
    <string name="app_name">SpotTrade</string>
    <string name="title_activity_maps">Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="URL">http://192.168.1.153:3000</string>
    <string name="facebook_app_id">660255747499055</string>
    <string name="fb_login_protocol_scheme">fb660255747499055</string>
    <string name="logged_in_user_id">logged_in_user_id</string>
    <string name="logged_in_user_first_name">logged_in_user_first_name</string>
    <string name="logged_in_user_last_name">logged_in_user_last_name</string>
    <string name="logged_in_user_email">logged_in_user_email</string>
    <string name="logged_in_user_password">logged_in_user_password</string>
    <string name="logged_in_user_phone_number">logged_in_user_phone_number</string>
    <string name="logged_in_user_photo_url">logged_in_user_photo_url</string>
    <string name="logged_in_user_total_ratings">logged_in_user_total_ratings</string>
    <string name="logged_in_user_overall_rating">logged_in_user_overall_rating</string>
    <string name="logged_in_user_facebookSignUp">logged_in_user_facebook</string>
    <string name="logged_in_user_googleSignUp">logged_in_user_facebook</string>
    <string name="logged_in_user_facebookUserID">logged_in_user_facebookUserID</string>
    <string name="logged_in_user_googleUserID">logged_in_user_googleUserID</string>
    <string name="SpotTradePref">SpotTradePref</string>
    <string name="bought_lid">lidBought</string>
    <string name="bought_lat">bought_lat</string>
    <string name="bought_lng">bought_lng</string>
    <string name="bought_address">bought_address</string>
    <string name="bought_name">bought_name</string>
    <string name="bought_seller_is_logged_in_user">bought_seller_is_logged_in_user</string>
    <string name="payment_method_added">payment_method_added</string>
    <string name="facebook_access_token">facebook access token</string>
    <string name="facebook_user_id">facebook user id</string>
    <string name="About">About</string>
    <string name="Accept">Accept</string>
    <string name="Account">Account</string>
    <string name="Active_Spots">Active Spots</string>
    <string name="Add_Card">Add Card</string>
    <string name="Add_Credit_or_Debit_Card">Add Credit or Debit Card</string>
    <string name="Add_Email">Add Email</string>
    <string name="Add_Location">Add Location</string>
    <string name="Add_Payment_Method">Add Payment Method</string>
    <string name="Add_profile_photo">Add Profile Photo</string>
    <string name="Adding_Card">Adding Card</string>
    <string name="Adding_and_verifying_card">Adding and verifying card</string>
    <string name="Adding_payment_method">Adding payment method</string>
    <string name="Adding_Spot">Adding Spot</string>
    <string name="Adding_spot_to_SpotTrade_database">Adding spot to SpotTrade\'s database</string>
    <string name="All">All</string>
    <string name="Allow_offers">Allow offers</string>
    <string name="Apply">Apply</string>
    <string name="Are_you_sure_you_want_to_delete">Are you sure you want to delete:</string>
    <string name="Are_you_sure_you_want_to_delete_this_spot">Are you sure you want to delete this spot?</string>
    <string name="Are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="available">available</string>
    <string name="Bought_Spot">Bought Spot</string>
    <string name="bought_your_spot">bought your spot</string>
    <string name="Buy_Now">Buy Now</string>
    <string name="Buyer">Buyer</string>
    <string name="Cancel">Cancel</string>
    <string name="Cancel_Offer">Cancel Offer</string>
    <string name="Card_Number">Card Number</string>
    <string name="Category">Category</string>
    <string name="Change_Password">Change Password</string>
    <string name="Change_Profile_Photo">Change Profile Photo</string>
    <string name="Checking_for_payment_methods">Checking for payment methods</string>
    <string name="Choose_Payment_Method">Choose Payment Method</string>
    <string name="Choose_Category">Choose Category</string>
    <string name="Choose_Type">Choose Type</string>
    <string name="Confirm">Confirm</string>
    <string name="Complete">Complete</string>
    <string name="Complete_Transaction">Complete Transaction</string>
    <string name="Completing">Completing</string>
    <string name="Completing_transaction">Completing transaction&#8230;</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Confirm_New_Password">Confirm New Password</string>
    <string name="Confirmation_Code">Confirmation Code</string>
    <string name="Confirming">Confirming</string>
    <string name="Complete_with_Facebook">Complete with Facebook</string>
    <string name="Complete_with_Google">Complete with Google</string>
    <string name="Country_Codes">Country Codes</string>
    <string name="Create_SpotTrade_Account">Create SpotTrade Account</string>
    <string name="Create_Spot">Create Spot</string>
    <string name="Creating_user">Creating user</string>
    <string name="Current_Password">Current Password</string>
    <string name="CVV">CVV</string>
    <string name="Date">Date</string>
    <string name="Date_and_Time">Date and Time</string>
    <string name="Date_Time_Purchased">Date &amp; Time Purchased</string>
    <string name="Decline">Decline</string>
    <string name="Default">Default</string>
    <string name="Delete">Delete</string>
    <string name="Deleting">Deleting</string>
    <string name="Deleting_payment_method">Deleting payment method</string>
    <string name="Description">Description</string>
    <string name="Done">Done</string>
    <string name="Edit_Category">Edit Category</string>
    <string name="Edit_Description">Edit Description</string>
    <string name="Edit_Price">Edit Price</string>
    <string name="Edit_Spot">Edit Spot</string>
    <string name="Edit_Type">Edit Type</string>
    <string name="Email">Email</string>
    <string name="Error">Error</string>
    <string name="Error_invalid_argument">Error: invalid argument</string>
    <string name="Error_unable_to_add_card">Error: unable to add card</string>
    <string name="Error_unable_to_add_spot">Error: unable to add spot</string>
    <string name="Error_unable_to_delete_payment_method">Error: unable to delete payment method</string>
    <string name="Error_unable_to_change_photo">Error: unable to change photo</string>
    <string name="Error_unable_to_update_payment_method">Error: unable to update payment method</string>
    <string name="Error_unable_to_update_field">Error: unable to update field</string>
    <string name="Error_unable_to_change_password">Error: unable to change password</string>
    <string name="Error_some_features_may_be_unavailable">Error: some features may be unavailable</string>
    <string name="Error_signing_into_Firebase">Error signing into Firebase</string>
    <string name="Error_unable_to_upload_image">Error: unable to upload image</string>
    <string name="Error_processing_payment">Error processing payment, please user other payment method.</string>
    <string name="Error_service_unavailable">Error: service unavailable</string>
    <string name="Feedback">Feedback</string>
    <string name="Field_cant_be_empty">Field can\'t be empty</string>
    <string name="Filter">Filter</string>
    <string name="Filter_Star_Rating">Filter Star Rating</string>
    <string name="First_Name">First Name</string>
    <string name="Forgot_Password"><u>Forgot Password?</u></string>
    <string name="got_spotted">got spotted</string>
    <string name="History">History</string>
    <string name="Home">Home</string>
    <string name="In_transit_to">In transit to</string>
    <string name="Incorrect_Password">Incorrect Password</string>
    <string name="Invalid_email_format">Invalid email format</string>
    <string name="Invalid_number">Invalid number</string>
    <string name="Labor">Labor</string>
    <string name="Last_Name">Last Name</string>
    <string name="Later">Later</string>
    <string name="Line">Line</string>
    <string name="Loading">Loading</string>
    <string name="Loading_payment_methods">Loading payment methods</string>
    <string name="Location">Location</string>
    <string name="Log_In">Log In</string>
    <string name="Log_Out">Log Out</string>
    <string name="Logging_In">Logging In</string>
    <string name="Make_default_payment_method">Make default payment method</string>
    <string name="Minimum_8_characters">Minimum 8 characters</string>
    <string name="MM_YY">MM/YY</string>
    <string name="Must_have_price">Must have a price</string>
    <string name="New_Password">New Password</string>
    <string name="No">No</string>
    <string name="No_date_selected">No date selected</string>
    <string name="No_time_selected">No time selected</string>
    <string name="No_Category_selected">No Category selected</string>
    <string name="No_Type_selected">No Type selected</string>
    <string name="No_Location_added">No Location added</string>
    <string name="No_feedback">No feedback</string>
    <string name="No_history">No history</string>
    <string name="No_offers">No offers</string>
    <string name="No_Payment_Method">No Payment Method</string>
    <string name="Not_Now">Not Now</string>
    <string name="Notifications">Notifications</string>
    <string name="Now">Now</string>
    <string name="Obtaining_credentials">Obtaining credentials</string>
    <string name="Offer">Offer</string>
    <string name="Offer_accepted">Offer accepted</string>
    <string name="Offer_canceled">Offer canceled</string>
    <string name="Offer_declined">Offer declined</string>
    <string name="offer">offer</string>
    <string name="_Offers">Offers</string>
    <string name="offers">offers</string>
    <string name="OK">OK</string>
    <string name="Other_Method">Other Method</string>
    <string name="Parking">Parking</string>
    <string name="Password">Password</string>
    <string name="Password_doesnt_match">Password doesn\'t match</string>
    <string name="Payment">Payment</string>
    <string name="Payment_method_deleted">Payment method deleted</string>
    <string name="Payment_Method_Options">Payment Method Options</string>
    <string name="Payment_method_added">Payment method added</string>
    <string name="No_payment_methods">No payment methods</string>
    <string name="Personal">Personal</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Make_Offer">Make Offer</string>
    <string name="Please_add_an_email_to_complete_registration">Please add an email to complete the sign up process</string>
    <string name="Please_enter_your_mobile_number">Please enter your mobile number</string>
    <string name="Please_set_up_Android_Pay">Please set up Android Pay</string>
    <string name="Price">Price</string>
    <string name="Profile_Photo">Profile Photo</string>
    <string name="Profile_photo_updated">Profile photo updated</string>
    <string name="Profile_photo_deleted">Profile photo deleted</string>
    <string name="Quantity">Quantity</string>
    <string name="Registering">Registering</string>
    <string name="Regular">Regular</string>
    <string name="Request">Request</string>
    <string name="Requested">Requested</string>
    <string name="Requested_Spotter">Requested Spotter</string>
    <string name="Requesting">Requesting</string>
    <string name="Search">Search</string>
    <string name="Sell">Sell</string>
    <string name="Seller">Seller</string>
    <string name="Selling">Selling</string>
    <string name="Sending_confirmation_code">Sending confirmation code</string>
    <string name="Type">Type</string>
    <string name="Your_Spots">Your Spots</string>
    <string name="Zip_Code">Zip Code</string>
</resources>