<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_your_spots"
            android:icon="@mipmap/ic_map_marker_black_24dp"
            android:title="@string/Your_Spots" />
        <item
            android:id="@+id/nav_history"
            android:icon="@mipmap/ic_history_black_24dp"
            android:title="@string/History" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@mipmap/ic_comment_black_24dp"
            android:title="@string/Feedback" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@mipmap/ic_currency_usd_grey600_24dp"
            android:title="@string/Payment"/>
        <item
            android:id="@+id/nav_personal"
            android:icon="@mipmap/ic_person_black_24dp"
            android:title="@string/Personal"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/ic_info_outline_black_24dp"
            android:title="@string/About" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@mipmap/ic_power_settings_new_black_24dp"
            android:checkable="false"
            android:title="@string/Log_Out" />
    </group>
</menu>
