<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/filter_map_bottomsheet"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/contentPadding"
            android:layout_alignParentLeft="true"
            android:text="@string/Filter_Spots"
            android:textAppearance="@android:style/TextAppearance.Material.DialogWindowTitle"/>
        <android.support.design.button.MaterialButton
            android:id="@+id/mbDone"
            android:layout_width="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/halfContentPadding"
            android:layout_marginRight="@dimen/contentPadding"
            android:textColor="@color/colorAccent"
            app:rippleColor="@color/colorAccentDark"
            android:text="@string/Done"/>
    </RelativeLayout>

    <TextView
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Type"
        android:layout_marginLeft="@dimen/contentPadding"
        android:layout_marginTop="@dimen/contentPadding"
        android:layout_marginBottom="@dimen/halfContentPadding"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/contentPadding"
        android:layout_marginRight="@dimen/contentPadding"
        android:layout_marginBottom="@dimen/contentPadding">
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rbAllType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/contentPadding"
            android:text="@string/All"/>
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rbSell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/contentPadding"
            android:text="@string/Sell"/>
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rbRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/contentPadding"
            android:text="@string/Request"/>
    </RadioGroup>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/contentPadding"
        android:layout_marginRight="@dimen/contentPadding"
        android:background="@color/LightGrayAndroid" />
    <TextView
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Category"
        android:layout_marginLeft="@dimen/contentPadding"
        android:layout_marginTop="@dimen/contentPadding"
        android:layout_marginBottom="@dimen/halfContentPadding"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/contentPadding"
        android:layout_marginRight="@dimen/contentPadding"
        android:layout_marginBottom="@dimen/contentPadding">
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rbAllCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/contentPadding"
            android:text="@string/All"/>
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rbParking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Parking"/>
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rbLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Line"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/rbOtherCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"/>
            <EditText
                android:id="@+id/etOtherCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/rbOtherCategory"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="-4dp"
                android:hint="@string/Other"
                android:textAppearance="@android:style/TextAppearance.Small"/>
        </RelativeLayout>
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/contentPadding"
        android:layout_marginRight="@dimen/contentPadding"
        android:background="@color/LightGrayAndroid" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/sOffersAllowed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/contentPadding"
        android:text="@string/Only_offers_allowed"
        android:textAppearance="@android:style/TextAppearance.Medium"/>
</LinearLayout>
