<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".nonActivity.login.LoginActivity">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/bLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Log_In"/>
    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/contentPadding"
        android:text="Sign up"/>

</LinearLayout>
