<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    android:elevation="10dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:elevation="@dimen/toolbarElevation"
        android:background="@color/colorPrimary"/>

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Please_add_an_email_to_complete_registration"
        android:layout_above="@+id/llEmail"
        android:layout_marginBottom="@dimen/contentPadding"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/llEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:drawableLeft="@mipmap/ic_email_grey600_24dp"
                android:drawablePadding="@dimen/contentPadding"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/contentPadding"
        android:background="@color/colorAccent"
        android:text="@string/Add_Email"
        android:textColor="@android:color/white"/>
</RelativeLayout>
