<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:elevation="10dp"
    android:clickable="true"
    android:background="@android:color/white"
    android:weightSum="1">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="@dimen/toolbarElevation"
        android:background="@color/colorPrimary"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilCardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/contentPadding">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Card_Number"
            android:maxLength="19"
            android:inputType="number"
            android:digits="01234 56789"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/contentPadding"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilExpirationDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietExpirationDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/MM_YY"
                android:inputType="phone"
                android:maxLength="5"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilCVV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietCVV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="4"
                android:hint="@string/CVV"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/contentPadding"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilZipCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietZipCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="5"
                android:hint="@string/Zip_Code"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/bAddCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/contentPadding"
            android:background="@color/colorAccent"
            android:text="@string/Add_Card"
            android:textColor="@android:color/white" />
    </RelativeLayout>
</LinearLayout>
