<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/contentPadding">

    <TextView
        android:id="@+id/tvCategoryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/contentPadding"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:textStyle="bold"
        android:textAllCaps="true"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/contentPadding"
        android:background="@color/LightGrayAndroid"/>

    <TextView
        android:id="@+id/tvAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/contentPadding"
        android:text="@string/All"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:drawableLeft="@mipmap/ic_public_black_24dp"
        android:drawableTint="@color/grey600"
        android:drawablePadding="@dimen/contentPadding"/>

    <TextView
        android:id="@+id/tvParking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/contentPadding"
        android:layout_marginBottom="@dimen/contentPadding"
        android:text="@string/Parking"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:drawableLeft="@mipmap/ic_car_grey600_24dp"
        android:drawableTint="@color/grey600"
        android:drawablePadding="@dimen/contentPadding"/>

    <TextView
        android:id="@+id/tvLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/contentPadding"
        android:layout_marginTop="@dimen/contentPadding"
        android:text="@string/Line"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:drawableLeft="@mipmap/ic_account_multiple_grey600_24dp"
        android:drawableTint="@color/grey600"
        android:drawablePadding="@dimen/contentPadding"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/contentPadding"
            android:src="@mipmap/ic_dots_horizontal_grey600_24dp"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:hint="@string/Other"
                android:inputType="textAutoComplete"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</LinearLayout>